# clay-ai

./: README.md
.cli-preferences/: aws_cli_api.py  github.yaml  npm.yaml  shadcn.yaml
.specstory/history/: untitled.md
clay_ai/: README.md  folder_structure.yaml  main.py  pyproject.toml  server.py
clay_ai/.cursor-history/: cursorrules_v10_2025-01-25T11-26-31-166Z  cursorrules_v11_2025-01-25T11-27-07-887Z  cursorrules_v12_2025-01-25T11-42-23-594Z  cursorrules_v3_2025-01-25T10-18-22-003Z  cursorrules_v4_2025-01-25T10-21-22-591Z  cursorrules_v5_2025-01-25T10-28-30-922Z  cursorrules_v6_2025-01-25T10-30-54-125Z  cursorrules_v7_2025-01-25T10-53-57-508Z  cursorrules_v8_2025-01-25T11-05-15-221Z  cursorrules_v9_2025-01-25T11-23-24-817Z
clay_ai/.specstory/history/: clay-ai-프로젝트-import-문제-해결.md  executing-python-script-with-poetry.md  fixing-poetry-installation-issues.md  fixing-python-environment-issues-with-poetry.md  fixing-python-import-error.md  implementing-memory-for-agent-types.md  pr-생성-및-github-403-에러-해결.md
clay_ai/agents/: base.py  coordinator.py  crawler.py  executor.py  linter.py  observer.py  planner.py  storage.py
clay_ai/api/: agents.py  events.py  linter.py  tasks.py  vercel_ai.py
clay_ai/cli/preferences/: AWS_CLI_README.md  aws.yaml  bun.yaml  openpanel.yaml  supabase.yaml  terminal-automation.yaml  vercel.yaml
clay_ai/core/: config.py  database.py  events.py  validation.py  vercel_ai.py
clay_ai/data/crawled/: crawled_data_20250125_104937.json  crawled_data_20250125_114340.json  crawled_data_20250125_120031.json  crawled_data_20250125_120036.json  crawled_data_20250125_120119.json  crawled_data_20250125_120125.json  crawled_data_20250125_120316.json  crawled_data_20250125_120754.json  crawled_data_20250125_120808.json  crawled_data_20250125_120827.json  crawled_data_20250125_120843.json
clay_ai/examples/: crawl_workflow.py  monitor_workflow.py
clay_ai/models/: agents.py  linter.py  memory.py  responses.py  tasks.py  validators.py
clay_ai/scripts/: init_db.py
clay_ai/tests/unit/: test_events.py  test_executor.py  test_tasks.py
vercel-e2b-code-interpreter/: bun.lockb
vercel-e2b-code-interpreter/app/: page.tsx
vercel-e2b-code-interpreter/app/api/sandbox/: route.ts
vercel-e2b-code-interpreter/docs/: SANDBOX-TEMPLATE-GUIDELINES.md
vercel-e2b-code-interpreter/lib/: templates.json
