[tool.poetry]
name = "clay-ai"
version = "0.1.0"
description = "Clay AI - A Multi-Agent Framework for Intelligent Automation"
authors = ["Clay AI Team"]
license = "MIT"
readme = "README.md"
packages = [{include = "clay_ai"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.23"
asyncpg = "^0.28.0"
redis = "^5.0.1"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"
e2b = "^0.12.0"
black = "^23.12.1"
isort = "^5.13.2"
ruff = "^0.1.9"
mypy = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 79
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"] 