[tool.poetry]
name = "clay-ai"
version = "0.1.0"
description = "Clay AI - A Python Agent Framework for Building Production-Grade AI Applications"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
asyncpg = "^0.28.0"
redis = "^5.0.1"
e2b = "^0.13.8"
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
aiohttp = "^3.9.1"
beautifulsoup4 = "^4.12.2"
aiofiles = "^23.2.1"
black = "^23.12.1"
isort = "^5.13.2"
ruff = "^0.1.11"
mypy = "^1.8.0"
psutil = "^5.9.8"
aiomysql = "^0.2.0"
greenlet = "^3.0.3"
cryptography = "^42.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 79

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 79
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"] 